--- a/TP FINAL/Web/Css/login.css
+++ b/TP FINAL/Web/Css/login.css
@@ -117,17 +117,37 @@ a:hover {
 /*   Boton    */
 .boton {
     color: #fff;
-    background: #455A64;
+    background: #607D8B;
     border: 0;
     width: 100px;
     height: 30px;
     font-family: 'Ubuntu',sans-serif;
 }
+.boton:hover {
+    background: #455A64;
+}
+
+select{
+    font-family: inherit;
+    color: #9E9E9E;
+    border: none;
+    border-bottom: solid 2px #c9c9c9;
+    padding: 5px;
+    width: 175px;
+    outline:0px;
+}
+select:focus,select.focus{
+    border: none;
+    border-bottom: solid 2px #0288D1;
+    padding: 5px;
+    width: 175px;
+    outline:0px;
+}
 
 /*TABLAS*/
 .divTabla {
     padding: 1em 3em;
-    margin: 1em 25%;
+    margin: 1em 3em;
     border-spacing: 0;
 }
 
@@ -146,32 +166,41 @@ a:hover {
     background-color: #fff;
     border: 0;
     height: 30px;
+    /*width: 100%;*/
     text-align: center;
     padding: 0;
     color: #000;
-    padding: 0;
+    
 }
 
 .divTabla tr:first-child td {
     background-color: #607D8B;
     text-align: center;
     color: #fff;
-    padding: 0;
 }
 
 table tr td.tBotonELim {
     vertical-align: middle;
     text-align: center;
-    width: 20%;
+    width: 125px;
     background-color: #F44336;
 }
 
 table tr td.tBotonELim:hover {
+    background-color: #D32F2F;
+    cursor: pointer;
+}
+
+table tr td.tBotonModif {
     vertical-align: middle;
     text-align: center;
-    width: 20%;
-    background-color: #D32F2F;
-    text-decoration: none;
+    width: 125px;
+    background-color: #9C27B0;
+}
+
+table tr td.tBotonModif:hover {
+    background-color: #7B1FA2;
+    cursor: pointer;
 }
 
 .tLink {
@@ -209,6 +238,7 @@ table tr td.tBotonELim:hover {
 
 input[readonly] {
     color: #9E9E9E;
+    width: 175px;
 }
 
 input[type="text"],input[type="password"] {
@@ -218,8 +248,11 @@ input[type="text"],input[type="password"] {
     transition: border .3s;
     font-family: 'Ubuntu',sans-serif;
     text-align: center;
+    width: 175px;
 }
 
 input[type="text"]:focus,input[type="text"].focus,input[type="password"]:focus,input[type="password"].focus {
-    border-bottom: solid 2px #969696;
+    border: none;
+    border-bottom: solid 2px #0288D1;
+    outline:0px;
 }
